# constitution_chat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
.agents/skills/langfuse/: SKILL.md
.agents/skills/langfuse/references/: error-analysis.md
scripts/: query_constitution.py  vectorize_constitution.py
src/: config.py
src/chat/: __init__.py  agent.py  chain.py  tools.py
src/retrieval/: __init__.py  embeddings_adapter.py  prompts.py  retriever.py
src/vector_db/: __init__.py  base.py  factory.py  qdrant.py
src/vectorize/: __init__.py  chunk.py  config.py  embed.py  extract.py  store.py
