[project]
name = "constitution"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "qdrant-client==1.18.0",
    "openai==2.41.1",
    "pymupdf==1.27.2.3",
    "python-dotenv==1.2.2",
    "tqdm==4.68.2",
    "streamlit==1.58.0",
    "langchain==1.3.9",
    "langchain-core==1.4.7",
    "langchain-openai==1.3.2",
    "langchain-qdrant==1.1.0",
]

[dependency-groups]
dev = [
    "pre-commit (==4.6.0)",
    "ruff (==0.15.17)",
]

[tool.uv]
package = false


# Ruff configuration
[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["E203", "E305"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
