[project]
name = "constitution"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "qdrant-client==1.18.0",
    "openai==2.45.0",
    "pymupdf==1.28.0",
    "python-dotenv==1.2.2",
    "tqdm==4.68.4",
    "streamlit==1.59.2",
    "langchain==1.3.13",
    "langchain-core==1.4.9",
    "langchain-openai==1.3.5",
    "langchain-qdrant==1.1.0",
    "langfuse==4.14.0",
]

[dependency-groups]
dev = [
    "pre-commit (==4.6.0)",
    "ruff (==0.15.21)",
]

[tool.uv]
package = false


# Ruff configuration
[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["E203", "E305"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
